# OM1

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  LLM_INTEGRATION_PLAN.md  README.md  RaspberryPi_Install_Guide.md  config_examples.yaml  demo_llm_providers.py  docker-compose.yml  env.example  mintlify.sh  projects.mdx  pyproject.toml  pyproject.toml  # Add pytest to the dependencies  robot_storage.json5  test_endpoint.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 🌟-bounty.md  🐛-bug-report.md  🥕-feature-request.md
.github/workflows/: docs-upload.yml  installation.yml  integration-tests.yml  lint.yml  mintlify.yml  release.yml  turtlebot-bridge.yml  unitest.yml
config/: background.json5  base-response-schema.json  cb_hackathon.json  coinbase.json  config-schema.json  conversation.json  conversation.json5  cubly.json  cubly.json5  deepseek.json  dimo_tesla.json  fabric_gps.json5  gemini.json  gemini.json5  grok.json  grok.json5  healthy.json5  iris.json  iris_loud.json  minimal.json  multiagent.json5  open_ai.json  open_ai.json5  quadruped_sim.json  quadruped_sim.json5  rag_multiagent.json5  robot_wallet_safe.json  robot_wallet_safe.json5  spot.json  spot.json5  spot_llama.json5  spot_local.json5  spot_mistral.json5  tesla.json5  test.json5  test_ble.json5  test_ble_gps.json5  test_gps.json5  test_lidar.json5  test_odom.json5  (+27 more)
config/schema/: schema.json
cyclonedds/: cyclonedds.xml
docs/: LLM_PROVIDERS_GUIDE.md  architecture.md  coinbase_hackathon.md  docs.json  hello_world.md  home.mdx  introduction.mdx  quick_start.mdx  styles.css
docs/action-plugin/: action-plugin-overview.mdx  movement-ros2.mdx  movement-zenoh.mdx  ros2-vs-zenoh.mdx  speech-and-tts.mdx
docs/api-reference/: api-price.mdx  authentication.mdx  introduction.mdx  openapi.yml
docs/configuration/: configuration.mdx
docs/core-features/: conversation.mdx  llm_models.mdx  smart_toy.mdx
docs/developing/: 0_introduction.mdx  1_get-started.mdx  2_architecture.mdx  3_configuration.mdx  4_inputs.mdx  5_llms.mdx  6_actions.mdx  7_project_structure.mdx  8_backgrounds.mdx
docs/development/: actions.mdx  architecture.mdx  cli-commands.mdx  env.mdx  guide.mdx  intro.mdx  linting-testing.mdx
docs/examples/: 0_overview.mdx  conversation.mdx  gazebo.mdx  llm_models.mdx  overview.mdx  smart_toy.mdx
docs/getting-started/: architecture.mdx  community-support.mdx  configuration.mdx  core-concept.mdx  faq.mdx  gazebo.mdx  get-started.mdx  introduction.mdx  quick_start.mdx  raspberrypi.mdx  run-om1.mdx
docs/input-plugin/: input-plugin-overview.mdx  speech-recognition.mdx  webcam-input.mdx
docs/llm/: llm-integration.mdx  openai-integration.mdx
docs/robotics/: asimov_governance.mdx  coinbase-x402.mdx  coinbase_hackathon.mdx  gps_compass.mdx  mac.mdx  motion_planning_lidarA1M8.mdx  motion_planning_turtlebot4.mdx  motion_planning_unitree_go2.mdx  raspberrypi.mdx  rf_mapping.mdx  rplidar_motion_planning.mdx  tesla_dimo.mdx  turtlebot4_autonomy.mdx  turtlebot4_movement.mdx  turtlebot4_zenoh.mdx  ubtech_yanshee.mdx  unitree_g1_humanoid.mdx  unitree_go2_quadruped.mdx  unitree_go2_quadruped_configurations.mdx  unitree_humanoid.mdx  unitree_robotics.mdx  zenoh.md
documention/: coinbase_hackathon.md  developer_guide.md  howto_conversation.md  howto_other_models.md  unitree_robotics.md
gazebo/: README.md  macOS.sh  stop.sh  ubuntu.sh
gazebo/docker/: start_simulation.sh  stop.sh
gazebo/docker/gazebo_ros/docker/guide_ws/src/custom_msgs/: CMakeLists.txt
gazebo/docker/gazebo_ros/docker/guide_ws/src/custom_msgs/msg/: UserInput.msg
gazebo/docker/gazebo_ros/docker/guide_ws/src/om1_msgs/: package.xml
gazebo/docker/gazebo_ros/docker/guide_ws/src/om1_msgs/msg/: TELESTAT.msg
gazebo/docker/ros_bridge/docker/messages/ros1/: CMakeLists.txt
gazebo/docker/ros_bridge/docker/recast/src/om1_interfaces/: CMakeLists.txt  package.xml
gazebo/docker/ros_bridge/docker/recast/src/om1_interfaces/msg/: ETH.msg
gazebo_sim/: README.md  macOS.sh
gazebo_sim/docker/: docker-compose.yml
gazebo_sim/docker/gazebo_ros/docker/guide_ws/src/custom_msgs/: package.xml
gazebo_sim/simulation/: docker-compose.yml  start_simulation.sh
mintlify/: docs.json  home.mdx  mintlify_splash.mdx  styles.css
mintlify/api-reference/: introduction.mdx
mintlify/developing/: 0_introduction.mdx  1_get-started.mdx  2_architecture.mdx  3_configuration.mdx  4_inputs.mdx  5_llms.mdx  9_troubleshooting_guide.mdx
mintlify/examples/: 0_overview.mdx  gazebo.mdx  llm_models.mdx  overview.mdx
mintlify/robotics/: coinbase-x402.mdx  coinbase_hackathon.mdx  mac.mdx  motion_planning_lidarA1M8.mdx  motion_planning_turtlebot4.mdx  motion_planning_unitree_go2.mdx  raspberrypi.mdx  rf_mapping.mdx  turtlebot4_zenoh.mdx  ubtech_yanshee.mdx  unitree_g1_humanoid.mdx  unitree_go2_quadruped.mdx
src/: go2_xbox_controller.py  run.py
src/actions/: __init__.py  base.py  orchestrator.py  passthrough.py
src/backgrounds/: __init__.py  base.py  orchestrator.py
src/fuser/: __init__.py
src/input/: __init__.py  orchestrator.py
src/inputs/: __init__.py  orchestrator.py
src/llm/: __init__.py  output_model.py
src/modules/: __init__.py  base.py  orchestrator.py
src/providers/: OpenMindProvider.py  TwitterProvider.py  __init__.py  asr_provider.py  asr_tts_provider.py  cyclonedds_listener_provider.py  cyclonedds_reader_provider.py  d435_provider.py  (+37 more)
system_hw_test/: Dockerfile  ble.py  go2_camera_opencv.py  go2_capture_image.py  go2_data_stream.py  go2_lidar.py  go2_state.py  lidar.py  lidar_example.txt  lidar_raw.txt  lidar_surface.py  mag_gps_module.py  om_audio_remote_input.py  om_keyboard_remote_control.py  om_remote_control.py  rpdriver.py  rpi_config.json5  rptest.py  simple_paths.py  teleops.html  test_audio.py  test_audio_mac.py  turtlebot4_battery.py  turtlebot4_camera_opencv.py  turtlebot4_keyboard_movement.py  turtlebot4_laserscan.py  turtlebot4_laserscan_dummy.py  turtlebot4_remote_control.py  yolo.py  zenoh_config.json5
tests/: test_multi_llm_structured.py
(+511 files in other folders)
