<?xml version="1.0"?>
<package format="2">
  <name>om1_msgs</name>
  <version>0.0.1</version>
  <description>ROS 1 Interfaces for OM1</description>

  <maintainer email="jan@openmind.org">Openmind.org</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Message generation dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- ROS 1 packages typically don't specify a build type -->
  </export>
</package>
